--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <ul>
+            <li><a href="">WebStudio</a></li>
+            <li><a href="">Студия</a></li>
+            <li><a href="">Портфолио</a></li>
+            <li><a href="">Контакты</a></li>
+        </ul>
+        <ul>
+            <li><a href="maillto:info@devstudio.com" >info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" >+38 096 111 11 11</a></li>
+        </ul>
+    </header>
+    <section>
+        <h1>Эффективные решения<br> для вашего бизнеса</h1>
+        <button>Заказать услугу</button>
+    </section>
+    <section>
+        <h2>Способы решения для бизнеса</h2>
+        <ul>
+            <li><h3><b>Внимание к деталям</b></h3></li>
+            <li>Идейные соображения, а также начало повседневной работы по формированию позиции.</li>
+            <li><h3><b>Пунктуальность</b></h3></li>
+            <li>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</li>
+            <li><h3><b>Планирование</b></h3></li>
+            <li>Равным образом консультация с широким активом в значительной степени обуславливает.</li>
+            <li><h3><b>Современные технологии</b></h3></li>
+            <li>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</li>
+
+
+
+        </ul>
+        
     
+    </section>
+
+
 </body>
 </html>
