--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <ul>
@@ -15,8 +17,8 @@
             <li><a href="">Контакты</a></li>
         </ul>
         <ul>
-            <li><a href="maillto:info@devstudio.com" >info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" >+38 096 111 11 11</a></li>
+            <li><a href="maillto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <section>
@@ -26,22 +28,26 @@
     <section>
         <h2>Способы решения для бизнеса</h2>
         <ul>
-            <li><h3><b>Внимание к деталям</b></h3></li>
+            <li>
+                <h3><b>Внимание к деталям</b></h3>
+            </li>
             <li>Идейные соображения, а также начало повседневной работы по формированию позиции.</li>
-            <li><h3><b>Пунктуальность</b></h3></li>
+            <li>
+                <h3><b>Пунктуальность</b></h3>
+            </li>
             <li>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</li>
-            <li><h3><b>Планирование</b></h3></li>
+            <li>
+                <h3><b>Планирование</b></h3>
+            </li>
             <li>Равным образом консультация с широким активом в значительной степени обуславливает.</li>
-            <li><h3><b>Современные технологии</b></h3></li>
+            <li>
+                <h3><b>Современные технологии</b></h3>
+            </li>
             <li>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</li>
-
-
-
         </ul>
-        
-    
     </section>
 
 
 </body>
+
 </html>
