--- a/index.html
+++ b/index.html
@@ -46,8 +46,26 @@
             <li>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</li>
         </ul>
     </section>
+    <section>
+        <h2>Наша команда</h2>
+        <img src="/img/IgorDemyianenko.svg" alt="IgorDemyianenko" width="270" height="215">
+        <b>Игорь Демьяненко</b> Product Designer
+        <img src="/img/OlgaRepina.svg" alt="OlgaRepina" width="270" height="215">
+        <b>Ольга Репина</b> Frontend Developer
+        <img src="/img/NykolayTarasov.svg" alt="NykolayTarasov" width="270" height="215">
+        <b>Николай Тарасов</b> Marketing
+        <img src="/img/MykhailErmakov.svg" alt="MykhailErmakov" width="270" height="215">
+        <b>Михаил Ермаков</b> UI Designer
+    </section>
+    <footer>
+        <a href="">WebStudio</a> <br>
+        г. Киев, пр-т Леси Украинки, 26 <br>
+        info@example.com <br>
+        +38 099 111 11 11
+        <address>
 
-
+        </address>
+    </footer>
 </body>
 
 </html>
