--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 
 <body>
     <header>
-        <ul>
-            <li><a href="">WebStudio</a></li>
-            <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="">WebStudio</a></li>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
         <ul>
             <li><a href="maillto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
+        
     </header>
     <section>
         <h1>Эффективные решения<br> для вашего бизнеса</h1>
@@ -47,23 +50,28 @@
         </ul>
     </section>
     <section>
+        <h2>Чем мы занимаемся</h2>
+        <img src="/img/Maket1.jpg" alt="Maket1" width="270" height="215">
+        <img src="/img/Maket2.jpg" alt="Maket2" width="270" height="215">
+        <img src="/img/Maket2.jpg" alt="Maket3" width="270" height="215">
+    </section>
+    <section>
         <h2>Наша команда</h2>
-        <img src="/img/IgorDemyianenko.svg" alt="IgorDemyianenko" width="270" height="215">
+        <img src="/img/IgorDemyianenko.jpg" alt="IgorDemyianenko" width="270" height="215">
         <b>Игорь Демьяненко</b> Product Designer
-        <img src="/img/OlgaRepina.svg" alt="OlgaRepina" width="270" height="215">
+        <img src="/img/OlgaRepina.jpg" alt="OlgaRepina" width="270" height="215">
         <b>Ольга Репина</b> Frontend Developer
-        <img src="/img/NykolayTarasov.svg" alt="NykolayTarasov" width="270" height="215">
+        <img src="/img/NykolayTarasov.jpg" alt="NykolayTarasov" width="270" height="215">
         <b>Николай Тарасов</b> Marketing
-        <img src="/img/MykhailErmakov.svg" alt="MykhailErmakov" width="270" height="215">
+        <img src="/img/MykhailErmakov.jpg" alt="MykhailErmakov" width="270" height="215">
         <b>Михаил Ермаков</b> UI Designer
     </section>
     <footer>
-        <a href="">WebStudio</a> <br>
-        г. Киев, пр-т Леси Украинки, 26 <br>
-        info@example.com <br>
-        +38 099 111 11 11
         <address>
-
+        <a href="">WebStudio</a> <br>
+        <p>г. Киев, пр-т Леси Украинки, 26 <br>
+        info@example.com <br>
+        +38 099 111 11 11</p>
         </address>
     </footer>
 </body>
