Изменилось название страницы и alt
WebStudio

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
 
 <body>
@@ -57,13 +57,13 @@
     </section>
     <section>
         <h2>Наша команда</h2>
-        <img src="/img/IgorDemyianenko.jpg" alt="IgorDemyianenko" width="270" height="215">
+        <img src="/img/IgorDemyianenko.jpg" alt="Игорь Демьяненко" width="270" height="215">
         <b>Игорь Демьяненко</b> Product Designer
-        <img src="/img/OlgaRepina.jpg" alt="OlgaRepina" width="270" height="215">
+        <img src="/img/OlgaRepina.jpg" alt="Ольга Репина" width="270" height="215">
         <b>Ольга Репина</b> Frontend Developer
-        <img src="/img/NykolayTarasov.jpg" alt="NykolayTarasov" width="270" height="215">
+        <img src="/img/NykolayTarasov.jpg" alt="Николай Тарасов" width="270" height="215">
         <b>Николай Тарасов</b> Marketing
-        <img src="/img/MykhailErmakov.jpg" alt="MykhailErmakov" width="270" height="215">
+        <img src="/img/MykhailErmakov.jpg" alt="Михаил Ермаков" width="270" height="215">
         <b>Михаил Ермаков</b> UI Designer
     </section>
     <footer>
