Исправлены ошибки по ДЗ1

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <nav>
+            <a href="">WebStudio</a>
             <ul>
-                <li><a href="">WebStudio</a></li>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
@@ -51,19 +51,19 @@
     </section>
     <section>
         <h2>Чем мы занимаемся</h2>
-        <img src="/img/Maket1.jpg" alt="Maket1" width="270" height="215">
-        <img src="/img/Maket2.jpg" alt="Maket2" width="270" height="215">
-        <img src="/img/Maket2.jpg" alt="Maket3" width="270" height="215">
+        <img src="./img/maket1.jpg" alt="Maket1" width="270" height="215">
+        <img src="./img/maket2.jpg" alt="Maket2" width="270" height="215">
+        <img src="./img/maket2.jpg" alt="Maket3" width="270" height="215">
     </section>
     <section>
         <h2>Наша команда</h2>
-        <img src="/img/IgorDemyianenko.jpg" alt="Игорь Демьяненко" width="270" height="215">
+        <img src="./img/igor_demyianenko.jpg" alt="Игорь Демьяненко" width="270" height="215">
         <b>Игорь Демьяненко</b> Product Designer
-        <img src="/img/OlgaRepina.jpg" alt="Ольга Репина" width="270" height="215">
+        <img src="./img/olga_repina.jpg" alt="Ольга Репина" width="270" height="215">
         <b>Ольга Репина</b> Frontend Developer
-        <img src="/img/NykolayTarasov.jpg" alt="Николай Тарасов" width="270" height="215">
+        <img src="./img/nykolay_tarasov.jpg" alt="Николай Тарасов" width="270" height="215">
         <b>Николай Тарасов</b> Marketing
-        <img src="/img/MykhailErmakov.jpg" alt="Михаил Ермаков" width="270" height="215">
+        <img src="./img/mykhail_ermakov.jpg" alt="Михаил Ермаков" width="270" height="215">
         <b>Михаил Ермаков</b> UI Designer
     </section>
     <footer>
