--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     </section>
     <section>
         <h2>Чем мы занимаемся</h2>
-        <img src="./img/maket1.jpg" alt="Maket1" width="270" height="215">
-        <img src="./img/maket2.jpg" alt="Maket2" width="270" height="215">
-        <img src="./img/maket2.jpg" alt="Maket3" width="270" height="215">
+        <img src="./img/maket_1.jpg" alt="Стол с компъютером и таблицей" width="270" height="215">
+        <img src="./img/maket_2.jpg" alt="Ноутбук с телефоном в руках" width="270" height="215">
+        <img src="./img/maket_2.jpg" alt="Планшет с матрицей цветов" width="270" height="215">
     </section>
     <section>
         <h2>Наша команда</h2>
