--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2>Способы решения для бизнеса</h2>
         <ul>
             <li>
-                <h3><b>Внимание к деталям</b></h3>
+                <h3>Внимание к деталям</h3>
             </li>
             <li>Идейные соображения, а также начало повседневной работы по формированию позиции.</li>
             <li>
@@ -51,27 +51,33 @@
     </section>
     <section>
         <h2>Чем мы занимаемся</h2>
-        <img src="./img/maket_1.jpg" alt="Стол с компъютером и таблицей" width="270" height="215">
-        <img src="./img/maket_2.jpg" alt="Ноутбук с телефоном в руках" width="270" height="215">
-        <img src="./img/maket_2.jpg" alt="Планшет с матрицей цветов" width="270" height="215">
+        <ul>
+            <li><img src="./img/maket_1.jpg" alt="Стол с компъютером и таблицей" width="270" height="215"></li>
+            <li><img src="./img/maket_2.jpg" alt="Ноутбук с телефоном в руках" width="270" height="215"></li>
+            <li><img src="./img/maket_2.jpg" alt="Планшет с матрицей цветов" width="270" height="215"></li>
+        </ul>
     </section>
     <section>
         <h2>Наша команда</h2>
-        <img src="./img/igor_demyianenko.jpg" alt="Игорь Демьяненко" width="270" height="215">
-        <b>Игорь Демьяненко</b> Product Designer
-        <img src="./img/olga_repina.jpg" alt="Ольга Репина" width="270" height="215">
-        <b>Ольга Репина</b> Frontend Developer
-        <img src="./img/nykolay_tarasov.jpg" alt="Николай Тарасов" width="270" height="215">
-        <b>Николай Тарасов</b> Marketing
-        <img src="./img/mykhail_ermakov.jpg" alt="Михаил Ермаков" width="270" height="215">
-        <b>Михаил Ермаков</b> UI Designer
+        <ul>
+            <li><img src="./img/igor_demyianenko.jpg" alt="Игорь Демьяненко" width="270" height="215"></li>
+            <li><b>Игорь Демьяненко</b> Product Designer</li>
+            <li><img src="./img/olga_repina.jpg" alt="Ольга Репина" width="270" height="215"></li>
+            <li><b>Ольга Репина</b> Frontend Developer</li>
+            <li><img src="./img/nykolay_tarasov.jpg" alt="Николай Тарасов" width="270" height="215"></li>
+            <li><b>Николай Тарасов</b> Marketing</li>
+            <li><img src="./img/mykhail_ermakov.jpg" alt="Михаил Ермаков" width="270" height="215"></li>
+            <li><b>Михаил Ермаков</b> UI Designer</li>
+        </ul>
     </section>
     <footer>
+        <a href="">WebStudio</a>
         <address>
-        <a href="">WebStudio</a> <br>
-        <p>г. Киев, пр-т Леси Украинки, 26 <br>
-        info@example.com <br>
-        +38 099 111 11 11</p>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <ul>    
+                <li> <a href="mailto:info@example.com"> info@example.com</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
         </address>
     </footer>
 </body>
