Исправлены li, готово к сдаче

--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
         <ul>
             <li>
                 <h3>Внимание к деталям</h3>
+                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
-            <li>Идейные соображения, а также начало повседневной работы по формированию позиции.</li>
             <li>
-                <h3><b>Пунктуальность</b></h3>
+                <h3>Пунктуальность</h3>
+                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
-            <li>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</li>
             <li>
-                <h3><b>Планирование</b></h3>
+                <h3>Планирование</h3>
+                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
-            <li>Равным образом консультация с широким активом в значительной степени обуславливает.</li>
             <li>
-                <h3><b>Современные технологии</b></h3>
+                <h3>Современные технологии</h3>
+                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
-            <li>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</li>
         </ul>
     </section>
     <section>
@@ -60,14 +60,26 @@
     <section>
         <h2>Наша команда</h2>
         <ul>
-            <li><img src="./img/igor_demyianenko.jpg" alt="Игорь Демьяненко" width="270" height="215"></li>
-            <li><b>Игорь Демьяненко</b> Product Designer</li>
-            <li><img src="./img/olga_repina.jpg" alt="Ольга Репина" width="270" height="215"></li>
-            <li><b>Ольга Репина</b> Frontend Developer</li>
-            <li><img src="./img/nykolay_tarasov.jpg" alt="Николай Тарасов" width="270" height="215"></li>
-            <li><b>Николай Тарасов</b> Marketing</li>
-            <li><img src="./img/mykhail_ermakov.jpg" alt="Михаил Ермаков" width="270" height="215"></li>
-            <li><b>Михаил Ермаков</b> UI Designer</li>
+            <li>
+                <img src="./img/igor_demyianenko.jpg" alt="Игорь Демьяненко" width="270" height="215">
+                <p>Игорь Демьяненко</p> 
+                <p>Product Designer</p>
+            </li>
+            <li>
+                <img src="./img/olga_repina.jpg" alt="Ольга Репина" width="270" height="215"></li>
+                <p>Ольга Репина</p> 
+                <p>Frontend Developer</p>
+            </li>
+            <li>
+                <img src="./img/nykolay_tarasov.jpg" alt="Николай Тарасов" width="270" height="215"></li>
+                <p>Николай Тарасов</p> 
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./img/mykhail_ermakov.jpg" alt="Михаил Ермаков" width="270" height="215"></li>
+                <p>Михаил Ермаков</p>
+                <p>UI Designer</p>
+            </li>
         </ul>
     </section>
     <footer>
