Убраны лишние li

--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./img/olga_repina.jpg" alt="Ольга Репина" width="270" height="215"></li>
+                <img src="./img/olga_repina.jpg" alt="Ольга Репина" width="270" height="215">
                 <p>Ольга Репина</p> 
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./img/nykolay_tarasov.jpg" alt="Николай Тарасов" width="270" height="215"></li>
+                <img src="./img/nykolay_tarasov.jpg" alt="Николай Тарасов" width="270" height="215">
                 <p>Николай Тарасов</p> 
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./img/mykhail_ermakov.jpg" alt="Михаил Ермаков" width="270" height="215"></li>
+                <img src="./img/mykhail_ermakov.jpg" alt="Михаил Ермаков" width="270" height="215">
                 <p>Михаил Ермаков</p>
                 <p>UI Designer</p>
             </li>
